<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".EmpezarJuego">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/GL_Empezar_Juego_Arriba"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.051983584" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/GL_Empezar_Juego_Arriba2"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.2" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/GL_Empezar_Juego_Arriba3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.35" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/GL_Empezar_Juego_Arriba4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.500684" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/GL_Empezar_Juego_Arriba5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.65" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/GL_Empezar_Juego_Arriba6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.8" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/GL_Empezar_Juego_Izquierda"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.2" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/GL_Empezar_Juego_Derecha"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.8" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/GL_Empezar_Juego_Arriba7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.95" />

    <Button
        android:id="@+id/BT_NivelTortuga"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/BT_NivelTortuga"
        app:layout_constraintBottom_toTopOf="@+id/GL_Empezar_Juego_Arriba2"
        app:layout_constraintEnd_toStartOf="@+id/GL_Empezar_Juego_Derecha"
        app:layout_constraintStart_toStartOf="@+id/GL_Empezar_Juego_Izquierda"
        app:layout_constraintTop_toTopOf="@+id/GL_Empezar_Juego_Arriba" />

    <Button
        android:id="@+id/BT_NivelZorro"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/BT_NivelZorro"
        app:layout_constraintBottom_toTopOf="@+id/GL_Empezar_Juego_Arriba3"
        app:layout_constraintEnd_toStartOf="@+id/GL_Empezar_Juego_Derecha"
        app:layout_constraintStart_toStartOf="@+id/GL_Empezar_Juego_Izquierda"
        app:layout_constraintTop_toTopOf="@+id/GL_Empezar_Juego_Arriba2" />

    <Button
        android:id="@+id/BT_NivelMono"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/BT_NivelMono"
        app:layout_constraintBottom_toTopOf="@+id/GL_Empezar_Juego_Arriba4"
        app:layout_constraintEnd_toStartOf="@+id/GL_Empezar_Juego_Derecha"
        app:layout_constraintStart_toStartOf="@+id/GL_Empezar_Juego_Izquierda"
        app:layout_constraintTop_toTopOf="@+id/GL_Empezar_Juego_Arriba3" />

    <Button
        android:id="@+id/BT_NivelLeopardo"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/BT_NivelLeopardo"
        app:layout_constraintBottom_toTopOf="@+id/GL_Empezar_Juego_Arriba5"
        app:layout_constraintEnd_toStartOf="@+id/GL_Empezar_Juego_Derecha"
        app:layout_constraintStart_toStartOf="@+id/GL_Empezar_Juego_Izquierda"
        app:layout_constraintTop_toTopOf="@+id/GL_Empezar_Juego_Arriba4" />

    <Button
        android:id="@+id/BT_NivelJungla"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/BT_NivelJungla"
        app:layout_constraintBottom_toTopOf="@+id/GL_Empezar_Juego_Arriba6"
        app:layout_constraintEnd_toStartOf="@+id/GL_Empezar_Juego_Derecha"
        app:layout_constraintStart_toStartOf="@+id/GL_Empezar_Juego_Izquierda"
        app:layout_constraintTop_toTopOf="@+id/GL_Empezar_Juego_Arriba5" />

    <Button
        android:id="@+id/BT_GuardarySalir"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/BT_Atras"
        app:layout_constraintBottom_toTopOf="@+id/GL_Empezar_Juego_Arriba7"
        app:layout_constraintEnd_toStartOf="@+id/GL_Empezar_Juego_Derecha"
        app:layout_constraintStart_toStartOf="@+id/GL_Empezar_Juego_Izquierda"
        app:layout_constraintTop_toTopOf="@+id/GL_Empezar_Juego_Arriba6" />

</androidx.constraintlayout.widget.ConstraintLayout>