<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/GL_ArribaIzquierda"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.2" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/GL_ArribaDerecha"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.8" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/GL_BotonPrimario"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.3" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/GL_BotonSecundario"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.43" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/GL_BotonTercero"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.54" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/GL_BotonCuarto"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.63" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/GL_BotonQuinto"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.73" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/GL_Arriba"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.05" />

    <Button
        android:id="@+id/BT_EmpezarJuego"
        style="@style/Widget.AppCompat.Button.Borderless.Colored"
        android:layout_width="0dp"
        android:layout_height="0dp"

        android:background="@drawable/bordes_redondos"
        android:text="@string/BT_empezarJuego"

        app:layout_constraintBottom_toTopOf="@+id/GL_BotonSecundario"
        app:layout_constraintEnd_toStartOf="@+id/GL_ArribaDerecha"

        app:layout_constraintHorizontal_bias="0"
        app:layout_constraintStart_toStartOf="@+id/GL_ArribaIzquierda"
        app:layout_constraintTop_toTopOf="@+id/GL_BotonPrimario"

        app:layout_constraintVertical_bias="0" />

    <Button
        android:id="@+id/BT_PartidasGuardadas"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/BT_partidasGuardadas"
        android:background="@drawable/bordes_redondos"
        app:layout_constraintBottom_toTopOf="@+id/GL_BotonTercero"
        app:layout_constraintEnd_toStartOf="@+id/GL_ArribaDerecha"
        app:layout_constraintStart_toStartOf="@+id/GL_ArribaIzquierda"
        app:layout_constraintTop_toTopOf="@+id/GL_BotonSecundario" />

    <Button
        android:id="@+id/BT_Ranking"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/BT_Ranking"
        android:background="@drawable/bordes_redondos"
        app:layout_constraintBottom_toTopOf="@+id/GL_BotonCuarto"
        app:layout_constraintEnd_toStartOf="@+id/GL_ArribaDerecha"
        app:layout_constraintStart_toStartOf="@+id/GL_ArribaIzquierda"
        app:layout_constraintTop_toTopOf="@+id/GL_BotonTercero" />

    <Button
        android:id="@+id/BT_Salir"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/BT_Salir"
        android:background="@drawable/bordes_redondos"
        app:layout_constraintBottom_toTopOf="@+id/GL_BotonQuinto"
        app:layout_constraintEnd_toStartOf="@+id/GL_ArribaDerecha"
        app:layout_constraintStart_toStartOf="@+id/GL_ArribaIzquierda"
        app:layout_constraintTop_toTopOf="@+id/GL_BotonCuarto" />

    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/animacionLogo"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@+id/GL_BotonPrimario"
        app:layout_constraintEnd_toStartOf="@+id/GL_ArribaDerecha"
        app:layout_constraintStart_toStartOf="@+id/GL_ArribaIzquierda"
        app:layout_constraintTop_toTopOf="@+id/GL_Arriba"
        app:lottie_autoPlay="true"
        app:lottie_loop="true"
        app:lottie_rawRes="@raw/logo_menuprincipal"
        tools:ignore="MissingConstraints" />

</androidx.constraintlayout.widget.ConstraintLayout>